<resources>
    <string name="app_name">tasks</string>
    <string name="back">Back</string>
    <string name="add_task">Add Task</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="task_type">Task Type</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
</resources>