<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewState"
            type="com.example.tasks.expandedtask.ExpandedTaskViewState" />
        <variable
            name="viewModel"
            type="com.example.tasks.expandedtask.ExpandedTaskViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/BackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="16sp"
            android:background="@color/transparent"
            app:icon="@android:drawable/ic_menu_revert"
            app:iconTint="?attr/colorOnPrimary"
            android:padding="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:onClick="@{() -> viewModel.backButtonPressed()}" />
        <TextView
            android:id="@+id/expanded_task_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewState.task.title}"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@id/BackButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/date_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/expanded_task_header"
            app:layout_constraintBottom_toTopOf="@id/title_text_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="16sp"
            android:background="@color/transparent"
            android:padding="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:onClick="@{() -> viewModel.saveButtonPressed()}"/>

        <TextView
            android:id="@+id/title_text_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date_header"
            app:layout_constraintBottom_toTopOf="@id/title_text_box"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="15dp"/>

        <EditText
            android:id="@+id/title_text_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:text="@{viewState.task.title}"
            android:hint="@string/title"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/title_text_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/description_text_header"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/description_text_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_text_box"
            app:layout_constraintBottom_toTopOf="@id/description_text_box"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="15dp"/>

        <EditText
            android:id="@+id/description_text_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:text="@{viewState.task.description}"
            android:hint="@string/description"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/description_text_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>